# rd-client

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  codecov.yml  pyproject.toml
rd_client/: __init__.py  client.py  errors.py
tests/: conftest.py  test_client.py
