[tool.poetry]
name = "rd-client"
version = "0.1.2"
description = "Client for RDStation API"
authors = ["Ramiro Tician <ramirotician@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6.11"
pytest-cov = "^2.10.0"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
